ref: add bert_mbert, czert, seznam_models , mE5, LaBSE, UAE-Large-V1, xlm-roberta, ALBERT, RetroMAE, ParaCrawl, CzEng_dataset, SimCSE, small-e-czech

--- a/main.bib
+++ b/main.bib
@@ -1,76 +1,187 @@
 % Word2Vec
 @misc{word2vec,
-      title={Efficient Estimation of Word Representations in Vector Space}, 
-      author={Tomas Mikolov and Kai Chen and Greg Corrado and Jeffrey Dean},
-      year={2013},
-      eprint={1301.3781},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
+  title         = {Efficient Estimation of Word Representations in Vector Space},
+  author        = {Tomas Mikolov and Kai Chen and Greg Corrado and Jeffrey Dean},
+  year          = {2013},
+  eprint        = {1301.3781},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
 }
 
 % GloVe
 @inproceedings{glove,
-  author = {Jeffrey Pennington and Richard Socher and Christopher D. Manning},
+  author    = {Jeffrey Pennington and Richard Socher and Christopher D. Manning},
   booktitle = {Empirical Methods in Natural Language Processing (EMNLP)},
-  title = {GloVe: Global Vectors for Word Representation},
-  year = {2014},
-  pages = {1532--1543},
-  url = {http://www.aclweb.org/anthology/D14-1162},
+  title     = {GloVe: Global Vectors for Word Representation},
+  year      = {2014},
+  pages     = {1532--1543},
+  url       = {http://www.aclweb.org/anthology/D14-1162}
 }
 
 % FastText
 @article{fasttext,
-  title={Enriching Word Vectors with Subword Information},
-  author={Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
-  journal={arXiv preprint arXiv:1607.04606},
-  year={2016}
+  title   = {Enriching Word Vectors with Subword Information},
+  author  = {Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
+  journal = {arXiv preprint arXiv:1607.04606},
+  year    = {2016}
 }
 
 % Transformers
 @misc{transformers,
-      title={Attention Is All You Need}, 
-      author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
-      year={2023},
-      eprint={1706.03762},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
+  title         = {Attention Is All You Need},
+  author        = {Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
+  year          = {2023},
+  eprint        = {1706.03762},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
 }
 
 % MTEB
 @misc{mteb,
-      title={MTEB: Massive Text Embedding Benchmark}, 
-      author={Niklas Muennighoff and Nouamane Tazi and Loïc Magne and Nils Reimers},
-      year={2023},
-      eprint={2210.07316},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
+  title         = {MTEB: Massive Text Embedding Benchmark},
+  author        = {Niklas Muennighoff and Nouamane Tazi and Loïc Magne and Nils Reimers},
+  year          = {2023},
+  eprint        = {2210.07316},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
 }
 
-% TF-IDF
-@article{tf-idf,
-  title={Indexing by Compression},
-  author={Spärck Jones, Karen},
-  journal={Journal of Documentation},
-  volume={28},
-  number={1},
-  pages={3--28},
-  year={1972},
-  publisher={Oxford University Press}
-}
-
-% BoW
-@book{bow,
-  title={Distributional Structure},
-  author={Harris, Zellig S.},
-  publisher={Linguistic Society of America},
-  year={1954}
-}
 
 @misc{bert_mbert,
-      title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding}, 
-      author={Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
-      year={2019},
-      eprint={1810.04805},
+  title         = {BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+  author        = {Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
+  year          = {2019},
+  eprint        = {1810.04805},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
+}
+
+@article{czert,
+  author       = {Jakub Sido and
+                  Ondrej Praz{\'{a}}k and
+                  Pavel Prib{\'{a}}n and
+                  Jan Pasek and
+                  Michal Sej{\'{a}}k and
+                  Miloslav Konop{\'{\i}}k},
+  title        = {Czert - Czech BERT-like Model for Language Representation},
+  journal      = {CoRR},
+  volume       = {abs/2103.13031},
+  year         = {2021},
+  url          = {https://arxiv.org/abs/2103.13031},
+  eprinttype    = {arXiv},
+  eprint       = {2103.13031},
+  timestamp    = {Thu, 14 Oct 2021 09:16:41 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2103-13031.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{seznam-models,
+      title={Some Like It Small: Czech Semantic Embedding Models for Industry Applications}, 
+      author={Jiří Bednář and Jakub Náplava and Petra Barančíková and Ondřej Lisický},
+      year={2023},
+      eprint={2311.13921},
       archivePrefix={arXiv},
       primaryClass={cs.CL}
+}
+
+
+@misc{multilingual-e5,
+  title         = {Multilingual E5 Text Embeddings: A Technical Report},
+  author        = {Liang Wang and Nan Yang and Xiaolong Huang and Linjun Yang and Rangan Majumder and Furu Wei},
+  year          = {2024},
+  eprint        = {2402.05672},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
+}
+
+@misc{LaBSE,
+      title={Language-agnostic BERT Sentence Embedding}, 
+      author={Fangxiaoyu Feng and Yinfei Yang and Daniel Cer and Naveen Arivazhagan and Wei Wang},
+      year={2022},
+      eprint={2007.01852},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@article{UAE-Large-V1,
+  title={AnglE-optimized Text Embeddings},
+  author={Li, Xianming and Li, Jing},
+  journal={arXiv preprint arXiv:2309.12871},
+  year={2023}
+}
+
+@article{xlm-roberta,
+  author       = {Alexis Conneau and
+                  Kartikay Khandelwal and
+                  Naman Goyal and
+                  Vishrav Chaudhary and
+                  Guillaume Wenzek and
+                  Francisco Guzm{\'{a}}n and
+                  Edouard Grave and
+                  Myle Ott and
+                  Luke Zettlemoyer and
+                  Veselin Stoyanov},
+  title        = {Unsupervised Cross-lingual Representation Learning at Scale},
+  journal      = {CoRR},
+  volume       = {abs/1911.02116},
+  year         = {2019},
+  url          = {http://arxiv.org/abs/1911.02116},
+  eprinttype    = {arXiv},
+  eprint       = {1911.02116},
+  timestamp    = {Mon, 11 Nov 2019 18:38:09 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-1911-02116.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{ALBERT,
+      title={ALBERT: A Lite BERT for Self-supervised Learning of Language Representations}, 
+      author={Zhenzhong Lan and Mingda Chen and Sebastian Goodman and Kevin Gimpel and Piyush Sharma and Radu Soricut},
+      year={2020},
+      eprint={1909.11942},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{RetroMAE,
+      title={RetroMAE: Pre-Training Retrieval-oriented Language Models Via Masked Auto-Encoder}, 
+      author={Shitao Xiao and Zheng Liu and Yingxia Shao and Zhao Cao},
+      year={2022},
+      eprint={2205.12035},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@inproceedings{ParaCrawl,
+  title={ParaCrawl: Web-scale parallel corpora for the languages of the EU},
+  author={Esplà, Miquel and Forcada, Mikel and Ramírez-Sánchez, Gema and Hoang, Hieu},
+  booktitle={Proceedings of Machine Translation Summit XVII: Translator, Project and User Tracks},
+  pages={118--119},
+  year={2019},
+  organization={European Association for Machine Translation}
+}
+
+@misc{CzEng_dataset,
+      title={Announcing CzEng 2.0 Parallel Corpus with over 2 Gigawords}, 
+      author={Tom Kocmi and Martin Popel and Ondrej Bojar},
+      year={2020},
+      eprint={2007.03006},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@inproceedings{SimCSE,
+  title={SimCSE: Simple Contrastive Learning of Sentence Embeddings},
+  author={Gao, Tianyu and Yao, Xingcheng and Chen, Danqi},
+  booktitle={Proceedings of the 2021 Conference on Empirical Methods in Natural Language Processing},
+  pages={6894--6910},
+  year={2021}
+}
+
+@misc{small-e-czech,
+      title={Siamese BERT-based Model for Web Search Relevance Ranking Evaluated on a New Czech Dataset}, 
+      author={Matěj Kocián and Jakub Náplava and Daniel Štancl and Vladimír Kadlec},
+      year={2021},
+      eprint={2112.01810},
+      archivePrefix={arXiv},
+      primaryClass={cs.IR}
 }
