acro: add ALBERT, SimCSE, RetroMAE, mE5

--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -17,4 +17,9 @@
   \acro{OOV}[OOV]{Out of vocabulary}
   \acro{mBERT}[mBERT]{Multilingual Bidirectional Encoder Representations from Transformers}
   \acro{MTEB}[MTEB]{Massive Text Embedding Benchmark}
+  \acro{ALBERT}[ALBERT]{A Lite BERT}
+  \acro{SimCSE}[SimCSE]{Simple Contrastive Learning of Sentence Embeddings}
+  \acro{RetroMAE}[RetroMAE]{Retrieval-oriented Language Models Via Masked Auto-Encoder}
+  \acro{mE5}[mE5]{Multilingual E5}
 \end{acronym}
+
