ref: add ms_marco_dataset, NQ_dataset, TriviaQA, SQuAD

--- a/main.bib
+++ b/main.bib
@@ -85,13 +85,22 @@
 }
 
 
-@misc{multilingual-e5,
+@misc{mE5,
   title         = {Multilingual E5 Text Embeddings: A Technical Report},
   author        = {Liang Wang and Nan Yang and Xiaolong Huang and Linjun Yang and Rangan Majumder and Furu Wei},
   year          = {2024},
   eprint        = {2402.05672},
   archiveprefix = {arXiv},
   primaryclass  = {cs.CL}
+}
+
+@misc{E5,
+      title={Text Embeddings by Weakly-Supervised Contrastive Pre-training}, 
+      author={Liang Wang and Nan Yang and Xiaolong Huang and Binxing Jiao and Linjun Yang and Daxin Jiang and Rangan Majumder and Furu Wei},
+      year={2024},
+      eprint={2212.03533},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
 }
 
 @misc{LaBSE,
@@ -184,4 +193,36 @@
       eprint={2112.01810},
       archivePrefix={arXiv},
       primaryClass={cs.IR}
+}
+
+@misc{ms_marco_dataset,
+      title={MS MARCO: A Human Generated MAchine Reading COmprehension Dataset}, 
+      author={Payal Bajaj and Daniel Campos and Nick Craswell and Li Deng and Jianfeng Gao and Xiaodong Liu and Rangan Majumder and Andrew McNamara and Bhaskar Mitra and Tri Nguyen and Mir Rosenberg and Xia Song and Alina Stoica and Saurabh Tiwary and Tong Wang},
+      year={2018},
+      eprint={1611.09268},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+
+@article{NQ_dataset,
+  title={Natural Questions: A Benchmark for Question Answering Research},
+  author={Kwiatkowski, Tom and Palomaki, Jennimaria and Redfield, Olivia and Collins, Michael and Parikh, Ankur and Alberti, Chris and Epstein, Danielle and Polosukhin, Illia and Devlin, Jacob and Lee, Kenton and Toutanova, Kristina and Jones, Llion},
+  journal={Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)},
+  pages={3877--3886},
+  year={2019}
+}
+
+@article{TriviaQA,
+  title={TriviaQA: A Large Scale Distantly Supervised Challenge Dataset for Reading Comprehension},
+  author={Joshi, Mandar and Choi, Eunsol and Weld, Daniel and Zettlemoyer, Luke},
+  journal={arXiv preprint arXiv:1705.03551},
+  year={2017}
+}
+
+@article{SQuAD,
+  title={Squad: A Question Answering Dataset for Readers},
+  author={Rajpurkar, Pranav and Jia, Robin and Polosukhin, Ilya},
+  journal={arXiv preprint arXiv:1606.05250},
+  year={2016}
 }
