--- a/src/document_setup.tex
+++ b/src/document_setup.tex
@@ -54,6 +54,7 @@
 \usepackage{multicol}
 \usepackage{subfig}
 \usepackage[export]{adjustbox}
+\usepackage{booktabs}
 
 % print version has different margins to accommodate the spine of the book
 % do not move this around, or it stops working
