ref: add yang2019multilingual, reimers-2019-sentence-bert

--- a/main.bib
+++ b/main.bib
@@ -226,3 +226,24 @@
   journal={arXiv preprint arXiv:1606.05250},
   year={2016}
 }
+
+% Multilingual Universal Sentence Encoder for Semantic Retrieval
+@misc{yang2019multilingual,
+      title={Multilingual Universal Sentence Encoder for Semantic Retrieval}, 
+      author={Yinfei Yang and Daniel Cer and Amin Ahmad and Mandy Guo and Jax Law and Noah Constant and Gustavo Hernandez Abrego and Steve Yuan and Chris Tar and Yun-Hsuan Sung and Brian Strope and Ray Kurzweil},
+      year={2019},
+      eprint={1907.04307},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+% SentenceTransformers models
+@inproceedings{reimers-2019-sentence-bert,
+    title = "Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks",
+    author = "Reimers, Nils and Gurevych, Iryna",
+    booktitle = "Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing",
+    month = "11",
+    year = "2019",
+    publisher = "Association for Computational Linguistics",
+    url = "http://arxiv.org/abs/1908.10084",
+}
