--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -129,7 +129,7 @@ This selection encompasses three distinct categories:
 \end{enumerate}
 
 All models should be open-source. And sentence-bert. <1B. With information about training process.
-If exisit two version of models - monolingual (without czech) and multilingula, we evaluate only multilingual
+If exisit two version of models - monolingual (no czech lang) and multilingual, we evaluate only multilingual
 
 % Czech models
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -141,7 +141,7 @@ The training set includes a comprehensive corpus of Czech texts, such as Wikiped
 
 There are 2 variants of the Czert model, Czert-A and Czert-B. Unfortunately Czert-A model is not available, so we will test only Czert-B model.
 Czert-B model is based on the traditional \ac{BERT} architecture (110M parameters).
-Model are pre-trained from scratch using the Masked Language Model (MLM) and Next Sentence Prediction (NSP) tasks. However, a slight modification is made to the NSP task to adapt it better to the Czech language corpus structure.
+Model are pre-trained from scratch using \ac{MLM} and \ac{NSP} tasks. However, a slight modification is made to the \ac{NSP} task to adapt it better to the Czech language corpus structure.
 
 
 \subsubsection{Seznam's models \cite{seznam-models}}
@@ -150,8 +150,8 @@ These models were developed by the Seznam research group with a focus on efficie
 
 \begin{itemize}
   \item RetroMAE-Small: \ac{BERT}-small model trained with the \ac{RetroMAE} objective \cite{RetroMAE} on a custom Czech corpus.
-  \item Dist-MPNet-ParaCrawl: \ac{BERT}-small model distilled from the \textit{sentence-transformers/all-mpnet-base-v2} \footnote{Model on the huggingface website: \url{https://huggingface.co/sentence-transformers/all-mpnet-base-v2}} model, using parallel cs-en dataset  \cite{ParaCrawl} for training.
-  \item Dist-MPNet-CzEng: \ac{BERT}-small model distilled from the \textit{sentence-transformers/all-mpnet-base-v2} \footnote{Model on the huggingface website: \url{https://huggingface.co/sentence-transformers/all-mpnet-base-v2}} model, using parallel cs-en dataset Czeng \cite{CzEng_dataset} for training.
+  \item Dist-MPNet-ParaCrawl: \ac{BERT}-small model distilled from the \textit{sentence-transformers/all-mpnet-base-v2} \footnote{\label{hf_all-mpnet-base-v2} Model on the huggingface website: \url{https://huggingface.co/sentence-transformers/all-mpnet-base-v2}} model, using parallel cs-en dataset  \cite{ParaCrawl} for training.
+  \item Dist-MPNet-CzEng: \ac{BERT}-small model distilled from the \textit{sentence-transformers/all-mpnet-base-v2} \footref{hf_all-mpnet-base-v2} . model, using parallel cs-en dataset Czeng \cite{CzEng_dataset} for training.
   \item SimCSE-RetroMAE-Small: The \ac{RetroMAE}-Small model fine-tuned with the \ac{SimCSE} \cite{SimCSE}.
   \item SimCSE-Dist-MPNet-ParaCrawl: The Dist-MPNet-ParaCrawl model fine-tuned with the \ac{SimCSE}.
   \item SimCSE-Dist-MPNet-CzEng: The Dist-MPNet-CzEng fine-tuned with the \ac{SimCSE}.
@@ -164,8 +164,8 @@ The models are trained using techniques like pre-training, knowledge distillatio
 
 % Multilingual models
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsubsection{mBERT-base \cite{bert_mbert}}
-\ac{mBERT} leverages the same transformer-based architecture as the original \ac{BERT} model but boasts an increased number of parameters (178M) to enhance its capabilities.
+\subsubsection{mBERT}
+\ac{mBERT} \cite{bert_mbert} leverages the same transformer-based architecture as the original \ac{BERT} model but boasts an increased number of parameters (178M) to enhance its capabilities.
 A key distinction of \ac{mBERT} lies in its ability to understand and process text data across multiple languages.
 To achieve this multilingual proficiency, \ac{mBERT} is trained on a massive dataset sourced from Wikipedia entries in 104 different languages.
 This corpus is meticulously constructed to ensure balanced representation, meaning each language is included regardless of the size or depth of its corresponding Wikipedia.
@@ -173,26 +173,64 @@ This approach ensures that even languages with limited resources are adequately 
 
 \subsubsection{\ac{mE5} \cite{mE5}}
 \ac{mE5} models by Microsoft are advanced text embedding models designed to operate across multiple languages based on English-only E5 models \cite{E5}.
-These models are available in three variants — small (118M parameters), base (278 parameters), and large (560M parameters) — catering to different computational efficiency and performance needs.
+These models are available in three variants — small, base, and large — catering to different computational efficiency and performance needs.
 The \ac{mE5} models are trained using a two-phase approach.
 The first phase involves weakly-supervised contrastive pre-training on about 1 billion text pairs sourced from diverse multilingual corpora (Wikipedia, mC4, Multilingual CC News, Reddit, etc.).
 The second phase is supervised fine-tuning on approximately 1.6 million data points from high-quality labeled datasets (MS MARCO \cite{ms_marco_dataset}, Natural Questions (NQ) \cite{NQ_dataset}, TriviaQA \cite{TriviaQA}, SQuAD \cite{SQuAD}, etc.).
 
 \subsubsection{LaBSE \cite{LaBSE}}
+\ac{LaBSE} model, developed by Google, is a state-of-the-art model for generating sentence embeddings that are effective across 109 languages.
+It leverages the transformer architecture and is trained on both monolingual (from sources like CommonCrawl and Wikipedia) and bilingual data (mined from web pages).
+LaBSE utilizes a dual-encoder structure with \ac{BERT}-based encoding modules.
+This setup enables the efficient processing of text pairs in multiple languages.
+
+\subsubsection{XLM-R \cite{xlm-roberta} }
+The \ac{XLM-R} model is a significant advancement in unsupervised cross-lingual representation learning, introduced by Facebook AI.
+It is specifically designed to improve performance across a wide range of cross-lingual tasks.
+\ac{XLM-R} is pre-trained on a dataset dubbed 'CC-100', derived from Common Crawl, covering about 2.5 terabytes of text across 100 languages.
+This dataset is significantly larger than the ones used by its predecessors, offering a broader and more diverse linguistic foundation.
+
+\subsubsection{SentenceTransformers multilingual models \cite{reimers-2019-sentence-bert}}
+
+\begin{itemize}
+  \item distiluse-base-multilingual-cased-v2: Multilingual knowledge distilled version of multilingual Universal Sentence Encoder \cite{yang2019multilingual}. This version supports 50+ languages including Czech.
+  \item paraphrase-multilingual-MiniLM-L12-v2: Multilingual version of paraphrase-MiniLM-L12-v2, trained on parallel data for 50+ languages including Czech.
+  \item paraphrase-multilingual-mpnet-base-v2: Multilingual version of paraphrase-mpnet-base-v2, trained on parallel data for 50+ languages including Czech.
+\end{itemize}
 
 
-\subsubsection{distiluse-base-multilingual-cased-v2}
-\subsubsection{paraphrase-multilingual-MiniLM-L12-v2}
-\subsubsection{paraphrase-multilingual-mpnet-base-v2}
+% Monolingual models
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsubsection{UAE-Large-V1 \cite{UAE-Large-V1}}
+The UAE-Large-V1 model focuses on enhancing short and long \ac{STS} tasks through a novel angle-optimized text embedding approach that works by dividing text embeddings into real and imaginary components in a complex space.
+This model is designed to address the challenges posed by the saturation zones of the cosine function, which can impede learning by causing vanishing gradients.
+
+The model is trained using a hybrid objective that combines cosine similarity, in-batch negatives, and angle differences in complex space.
+This approach helps overcome the limitations of traditional cosine similarity measures by ensuring better gradient flow during training.
+Training dataset includes around 21K samples and is specifically designed to evaluate \ac{STS} performance on long texts, which are common in real-world applications.
 
 
 
 
 \subsubsection{snowflake-arctic-embed}
+This study investigates the use of snowflake-arctic-embed, a suite of text embedding models optimized for retrieval tasks. The suite offers multiple model sizes (xs, s, m, m-long, l) for flexibility.
+
+Snowflake-arctic-embed leverages a two-stage training pipeline
+\begin{enumerate}
+  \item Pretraining on large batches of query-document pairs with dynamically generated negative examplesusing dataset with 400M samples combining public data and proprietary web search data.
+  \item Fine-tuning the model on a smaller dataset (1M samples) consisting of query-positive document-negative document triplets to improve retrieval accuracy.
+\end{enumerate}
+
+
+
+
+
+
 
 
 \subsubsection{jina-embeddings}
-Only jina-embeddings-v2, because it's better in \ac{mteb}
+Only jina-embeddings-v2, because it's better in \ac{MTEB}
 
 
 \subsubsection{nomic-embed-text}
@@ -209,7 +247,9 @@ gte-base
 gte-small
 gte-tiny
 
-\subsubsection{bge}
+\subsubsection{BGE}
+The BGE models (BAAI General Embeddings) are part of the comprehensive C-Pack resources aimed at advancing the field of general Chinese text embeddings.
+Here's a brief overview of their architecture and training process:
 
 bge-large-en-v1.5
 bge-base-en-v1.5
@@ -218,11 +258,7 @@ bge-micro-v2
 
 \subsection{mxbai-embed-large-v1}
 
-\subsubsection{xlm-roberta \cite{xlm-roberta} }
-XLM-RoBERTa is a multilingual version of RoBERTa.
-It is pre-trained on 2.5TB of filtered CommonCrawl data containing 100 languages.
 
-\subsubsection{UAE-Large-V1 \cite{UAE-Large-V1}}
 
 
 
