--- a/main.bib
+++ b/main.bib
@@ -247,3 +247,33 @@
     publisher = "Association for Computational Linguistics",
     url = "http://arxiv.org/abs/1908.10084",
 }
+
+% BGE
+@misc{bge_embedding,
+      title={C-Pack: Packaged Resources To Advance General Chinese Embedding}, 
+      author={Shitao Xiao and Zheng Liu and Peitian Zhang and Niklas Muennighoff},
+      year={2023},
+      eprint={2309.07597},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+% nomic-embed-text-v1
+@misc{nussbaum2024nomic,
+      title={Nomic Embed: Training a Reproducible Long Context Text Embedder}, 
+      author={Zach Nussbaum and John X. Morris and Brandon Duderstadt and Andriy Mulyar},
+      year={2024},
+      eprint={2402.01613},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+% Matryoshka Representation Learning
+@misc{kusupati2024matryoshka,
+      title={Matryoshka Representation Learning}, 
+      author={Aditya Kusupati and Gantavya Bhatt and Aniket Rege and Matthew Wallingford and Aditya Sinha and Vivek Ramanujan and William Howard-Snyder and Kaifeng Chen and Sham Kakade and Prateek Jain and Ali Farhadi},
+      year={2024},
+      eprint={2205.13147},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
