acros: add LaBSE, MLM, XLM-R, NSP, BGE, GTE

--- a/src/abbreviations.tex
+++ b/src/abbreviations.tex
@@ -21,5 +21,11 @@
   \acro{SimCSE}[SimCSE]{Simple Contrastive Learning of Sentence Embeddings}
   \acro{RetroMAE}[RetroMAE]{Retrieval-oriented Language Models Via Masked Auto-Encoder}
   \acro{mE5}[mE5]{Multilingual E5}
+  \acro{LaBSE}[LaBSE]{Language-Agnostic BERT Sentence Embedding}
+  \acro{MLM}[MLM]{Masked Language Modeling}
+  \acro{XLM-R}[XLM-R]{XLM-Roberta}
+  \acro{NSP}[NSP]{Next Sentence Prediction}
+  \acro{BGE}[BGE]{BAAI General Embeddings}
+  \acro{GTE}[GTE]{General Text Embedding}
 \end{acronym}
 
