methodology: add Nomic, GTE, BGE, TaylorAI

--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -133,6 +133,7 @@ If exisit two version of models - monolingual (no czech lang) and multilingual, 
 
 % Czech models
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Czert
 \subsubsection{Czert-B \cite{czert}}
 
 The Czert model is a set of Czech \ac{BERT}-like language representation models developed specifically to enhance performance in processing the Czech language.
@@ -143,7 +144,7 @@ There are 2 variants of the Czert model, Czert-A and Czert-B. Unfortunately Czer
 Czert-B model is based on the traditional \ac{BERT} architecture (110M parameters).
 Model are pre-trained from scratch using \ac{MLM} and \ac{NSP} tasks. However, a slight modification is made to the \ac{NSP} task to adapt it better to the Czech language corpus structure.
 
-
+% Seznam
 \subsubsection{Seznam's models \cite{seznam-models}}
 This study leverages a group of compact word embedding models specifically designed for the Czech language.
 These models were developed by the Seznam research group with a focus on efficient word representation generation.
@@ -164,6 +165,7 @@ The models are trained using techniques like pre-training, knowledge distillatio
 
 % Multilingual models
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% mBERT
 \subsubsection{mBERT}
 \ac{mBERT} \cite{bert_mbert} leverages the same transformer-based architecture as the original \ac{BERT} model but boasts an increased number of parameters (178M) to enhance its capabilities.
 A key distinction of \ac{mBERT} lies in its ability to understand and process text data across multiple languages.
@@ -171,6 +173,7 @@ To achieve this multilingual proficiency, \ac{mBERT} is trained on a massive dat
 This corpus is meticulously constructed to ensure balanced representation, meaning each language is included regardless of the size or depth of its corresponding Wikipedia.
 This approach ensures that even languages with limited resources are adequately represented within the training data, fostering better performance for these languages.
 
+% mE5
 \subsubsection{\ac{mE5} \cite{mE5}}
 \ac{mE5} models by Microsoft are advanced text embedding models designed to operate across multiple languages based on English-only E5 models \cite{E5}.
 These models are available in three variants — small, base, and large — catering to different computational efficiency and performance needs.
@@ -178,18 +181,21 @@ The \ac{mE5} models are trained using a two-phase approach.
 The first phase involves weakly-supervised contrastive pre-training on about 1 billion text pairs sourced from diverse multilingual corpora (Wikipedia, mC4, Multilingual CC News, Reddit, etc.).
 The second phase is supervised fine-tuning on approximately 1.6 million data points from high-quality labeled datasets (MS MARCO \cite{ms_marco_dataset}, Natural Questions (NQ) \cite{NQ_dataset}, TriviaQA \cite{TriviaQA}, SQuAD \cite{SQuAD}, etc.).
 
+% LaBSE
 \subsubsection{LaBSE \cite{LaBSE}}
 \ac{LaBSE} model, developed by Google, is a state-of-the-art model for generating sentence embeddings that are effective across 109 languages.
 It leverages the transformer architecture and is trained on both monolingual (from sources like CommonCrawl and Wikipedia) and bilingual data (mined from web pages).
 LaBSE utilizes a dual-encoder structure with \ac{BERT}-based encoding modules.
 This setup enables the efficient processing of text pairs in multiple languages.
 
+% XLM-R
 \subsubsection{XLM-R \cite{xlm-roberta} }
 The \ac{XLM-R} model is a significant advancement in unsupervised cross-lingual representation learning, introduced by Facebook AI.
 It is specifically designed to improve performance across a wide range of cross-lingual tasks.
 \ac{XLM-R} is pre-trained on a dataset dubbed 'CC-100', derived from Common Crawl, covering about 2.5 terabytes of text across 100 languages.
 This dataset is significantly larger than the ones used by its predecessors, offering a broader and more diverse linguistic foundation.
 
+% SentenceTransformers
 \subsubsection{SentenceTransformers multilingual models \cite{reimers-2019-sentence-bert}}
 
 \begin{itemize}
@@ -202,6 +208,7 @@ This dataset is significantly larger than the ones used by its predecessors, off
 % Monolingual models
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% UAE-Large-V1
 \subsubsection{UAE-Large-V1 \cite{UAE-Large-V1}}
 The UAE-Large-V1 model focuses on enhancing short and long \ac{STS} tasks through a novel angle-optimized text embedding approach that works by dividing text embeddings into real and imaginary components in a complex space.
 This model is designed to address the challenges posed by the saturation zones of the cosine function, which can impede learning by causing vanishing gradients.
@@ -210,9 +217,16 @@ The model is trained using a hybrid objective that combines cosine similarity, i
 This approach helps overcome the limitations of traditional cosine similarity measures by ensuring better gradient flow during training.
 Training dataset includes around 21K samples and is specifically designed to evaluate \ac{STS} performance on long texts, which are common in real-world applications.
 
+% Nomic Embed
+\subsubsection{Nomic Embed V1 and Nomic Embed V1.5}
+The Nomic model \cite{nussbaum2024nomic}, designed for reproducible long-context text embedding, employs a modified BERT architecture optimized for 8192 token sequences.
+It includes innovations such as rotary positional embeddings and SwiGLU activations, enhancing its ability to process longer texts.
+The model undergoes a comprehensive training regime starting with unsupervised contrastive pretraining on large-scale datasets, followed by supervised fine-tuning using human-annotated data.
+This process leverages contrastive learning to improve text embedding capabilities, significantly enhancing performance on both short and long-context tasks.
 
+Nomic Embed V1.5 is an improvement upon Nomic Embed V1 that utilizes Matryoshka Representation Learning \cite{kusupati2024matryoshka} which gives developers the flexibility to trade off the embedding size for a negligible reduction in performance.
 
-
+% snowflake-arctic-embed
 \subsubsection{snowflake-arctic-embed}
 This study investigates the use of snowflake-arctic-embed, a suite of text embedding models optimized for retrieval tasks. The suite offers multiple model sizes (xs, s, m, m-long, l) for flexibility.
 
@@ -222,48 +236,37 @@ Snowflake-arctic-embed leverages a two-stage training pipeline
   \item Fine-tuning the model on a smaller dataset (1M samples) consisting of query-positive document-negative document triplets to improve retrieval accuracy.
 \end{enumerate}
 
+% GTE
+\subsubsection{GTE and GTE-v1.5}
+The \ac{GTE} model is a pivotal development in \ac{NLP}, utilizing a deep Transformer encoder based on a \ac{BERT}-like architecture for generating dense text embeddings.
+Initially, the \ac{GTE} model is unsupervisedly pre-trained on approximately 800 million text pairs from diverse web sources, enabling broad semantic coverage.
+It then undergoes supervised fine-tuning with 3 million annotated text triples from varied datasets, including MS MARCO and Natural Questions, applying contrastive learning to enhance text relevance detection and similarity assessments.
+This dual-stage training strategy equips the \ac{GTE} model to excel in complex \ac{NLP} tasks, demonstrating significant versatility and robust performance across multiple applications.
+
+There is also updated version \ac{GTE}-v1.5.
+
+% BGE
+\subsubsection{BGE-v1.5}
+\ac{BGE} Models \cite{bge_embedding} are built on a BERT-like architecture, available in three sizes: small, base, and large.
+They are trained using a sophisticated multi-stage process involving pre-training on large unlabeled data, contrastive learning for fine-tuning on text pairs, and multi-task learning with high-quality labeled datasets.
+This training regimen equips BGE models to handle a wide range of text embedding tasks with high efficiency and accuracy.
 
 
+% TaylorAI
+\subsubsection{TaylorAI tiny models}
+This study incorporates two distilled transformer models from TaylorAI for evaluation:
+
+\begin{itemize}
+  \item \textbf{TaylorAI/bge-micro-v2} \footnote{TaylorAI/bge-micro-v2 model on the huggingface website: \url{https://huggingface.co/TaylorAI/bge-micro-v2}}: This model is a 2-step distilled version of the small BGE-v1.5 model
+  \item \textbf{TaylorAI/gte-tiny} \footnote{TaylorAI/gte-tiny model on the huggingface website: \url{https://huggingface.co/TaylorAI/gte-tiny}}: This model is a distilled version of the small version of GTE model
+\end{itemize}
 
 
-
-
-
-\subsubsection{jina-embeddings}
-Only jina-embeddings-v2, because it's better in \ac{MTEB}
-
-
-\subsubsection{nomic-embed-text}
-nomic-embed-text-v1
-nomic-embed-text-v1.5
-
-
-\subsubsection{gte}
-
-gte-large-en-v1.5
-gte-base-en-v1.5
-gte-large
-gte-base
-gte-small
-gte-tiny
-
-\subsubsection{BGE}
-The BGE models (BAAI General Embeddings) are part of the comprehensive C-Pack resources aimed at advancing the field of general Chinese text embeddings.
-Here's a brief overview of their architecture and training process:
-
-bge-large-en-v1.5
-bge-base-en-v1.5
-bge-small-en-v1.5
-bge-micro-v2
-
-\subsection{mxbai-embed-large-v1}
-
-
-
-
-
-
-
+% TODO:
+% \subsubsection{jina-embeddings}
+%Only jina-embeddings-v2, because it's better in \ac{MTEB}
+%
+%\subsection{mxbai-embed-large-v1}
 
 
 \begin{itemize}
