Init parameters table of models

--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,6 @@
 
 % most of the configuration stuff happens here
 \input{src/document_setup.tex}
-
 %% | ---------------------- the contents ---------------------- |
 
 \begin{document}
@@ -176,5 +175,7 @@
 \renewcommand\chaptername{Appendix A}
 
 \chapter{Appendix A}
+
+\input{src/tables/models_detailed.tex}
 
 \end{document}
