--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -268,16 +268,30 @@ This study incorporates two distilled transformer models from TaylorAI for evalu
 %
 %\subsection{mxbai-embed-large-v1}
 
+\section{Optimizing Text Representations for \ac{RAG} in Technical \ac{QA}}
+This section explores the application of \ac{RAG} algorithms for generating natural language answers to questions posed on technical documents.
+We investigate the crucial role of text representations in \ac{RAG}'s effectiveness and outline the evaluation approach to identify optimal representation models for this specific task.
+
+\subsection{\ac{RAG} Algorithm and Text Representation Reliance}
+The RAG algorithm leverages a two-stage approach for answer generation: retrieval and generation.
+Both stages rely heavily on the chosen text representation technique.
+
+\begin{itemize}
+  \item \textbf{Retrieval}: The algorithm retrieves relevant passages from a technical document (e.g., manual) that address the user's question. To achieve this, RAG represents both the question and potential answer passages using the same text representation model (e.g., word embeddings, sentence embeddings). The similarity between the question and passage representations determines the relevance of a passage for answering the question.  
+  \item \textbf{Generation}: Once retrieved, the passages serve as input for the generation model, which constructs a natural language answer. The quality of the text representation in these retrieved passages is crucial. Rich representations that capture semantic relationships and context allow the generation model to create informative and well-structured answers.  
+\end{itemize}
+
+\section{REMOVE: Methodology structure}
 
 \begin{itemize}
     \item Describe the evaluation process for different text representations.
-    \item \begin{itemize}
+      \begin{itemize}
         \item{Specify the chosen word, sentence, and paragraph representation models (e.g., FastText, BERT variants).}
         \item{Explain the usage of analogy tests and confusion matrices for evaluation.}
         \item{Detail the selection process for the UPV corpus set and its suitability for technical QA tasks.}
       \end{itemize}
     \item Outline the second part of the study focusing on RAG for technical QA.
-    \item \begin{itemize}
+      \begin{itemize}
         \item{Explain the RAG algorithm and its reliance on text representations.}
         \item{Describe the evaluation approach for selecting optimal representations for RAG.}
         \item{Mention the factors considered during evaluation, such as embedding efficiency, text chunk size, and factuality of generated answers.}
