--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -268,11 +268,11 @@ This study incorporates two distilled transformer models from TaylorAI for evalu
 %
 %\subsection{mxbai-embed-large-v1}
 
-\section{Optimizing Text Representations for \ac{RAG} in Technical \ac{QA}}
+\section{Optimizing Text Representations for RAG in Technical QA}
 This section explores the application of \ac{RAG} algorithms for generating natural language answers to questions posed on technical documents.
 We investigate the crucial role of text representations in \ac{RAG}'s effectiveness and outline the evaluation approach to identify optimal representation models for this specific task.
 
-\subsection{\ac{RAG} Algorithm and Text Representation Reliance}
+\subsection{RAG Algorithm and Text Representation Reliance}
 The RAG algorithm leverages a two-stage approach for answer generation: retrieval and generation.
 Both stages rely heavily on the chosen text representation technique.
 
@@ -280,6 +280,16 @@ Both stages rely heavily on the chosen text representation technique.
   \item \textbf{Retrieval}: The algorithm retrieves relevant passages from a technical document (e.g., manual) that address the user's question. To achieve this, RAG represents both the question and potential answer passages using the same text representation model (e.g., word embeddings, sentence embeddings). The similarity between the question and passage representations determines the relevance of a passage for answering the question.  
   \item \textbf{Generation}: Once retrieved, the passages serve as input for the generation model, which constructs a natural language answer. The quality of the text representation in these retrieved passages is crucial. Rich representations that capture semantic relationships and context allow the generation model to create informative and well-structured answers.  
 \end{itemize}
+
+\subsection{Key factors}
+To identify the most suitable text representation model for \ac{RAG} in technical \ac{QA}, we propose a comprehensive evaluation approach that considers the following key factors:
+
+\begin{itemize}
+  \item \textbf{Embedding Efficiency}: Computational efficiency is crucial for real-world applications. We will evaluate the processing time required for different representation models, considering factors like embedding dimensionality and model complexity. This ensures the chosen model can handle real-time \ac{QA} tasks within reasonable processing time constraints.
+  \item \textbf{Text Chunk Size}: The size of text chunks used by the \ac{RAG} algorithm (e.g., words, sentences, or paragraphs) can impact performance. We will investigate the optimal chunk size for technical \ac{QA} tasks. Here, we will balance the granularity of information retrieved by the model with computational efficiency. Smaller chunks (words) might capture finer details but require more processing, while larger chunks (paragraphs) might be faster to process but might miss relevant details.  
+  \item \textbf{Factuality of Generated Answers}:  The primary objective is to generate answers that are factually accurate and consistent with the technical document. We will evaluate the models based on metrics that assess the factual correctness and coherence of the generated answers in response to technical questions. This ensures the generated answers are reliable and trustworthy for the user.
+\end{itemize}
+
 
 \section{REMOVE: Methodology structure}
 
