--- a/src/experiments_and_results.tex
+++ b/src/experiments_and_results.tex
@@ -2,6 +2,8 @@
 
 \chapter{Experiments and Results\label{chap:experiments_and_results}}
 
+\input{src/tables/evaluation.tex}
+
 \begin{itemize}
     \item Present the results of the evaluation for different text representations using analogy tests and confusion matrices.
     \item Discuss the findings regarding the effectiveness of each representation model for capturing semantic relationships in technical text.
