--- a/src/tables/evaluation.tex
+++ b/src/tables/evaluation.tex
@@ -25,7 +25,7 @@
       mBERT & 0.8584 & 0.2012 & 0.8361 & 0.1306 & 178M \\
       mE5\textsubscript{Small} & 0.8952 & 0.6078 & 0.8564 & 0.4446 & 118M \\
       mE5\textsubscript{Base} & 0.8961 & 0.6019 & 0.8726 & 0.5134 & 278M \\
-      mE5\textsubscript{Large} & 0.9084 & 0.6559 & 0.8944 & 0.5593 & 560M \\
+      mE5\textsubscript{Large} & \textbf{0.9084} & \textbf{0.6559} & \textbf{0.8944} & \textbf{0.5593} & 560M \\
       LaBSE & 0.8875 & 0.3525 & 0.8594 & 0.3264 & 471M \\
       XLM-R\textsubscript{Base} & 0.8011 & 0.0098 & 0.7701 & 0.0198 & 279M \\
       XLM-R\textsubscript{Large} & 0.7884 & 0.0460 & 0.7411 & 0.0298 & 560M \\
@@ -54,6 +54,6 @@
     \textbf{QMA}\textsubscript{d} (\textbf{QMA}\textsubscript{dl}) are Question Match Accuracy for diacritics (diacriticless) model.
     \textbf{AMA}\textsubscript{d} (\textbf{AMA}\textsubscript{d}) are Question Match Accuracy for diacritics (diacriticless) model.
     \textbf{\#params} is total number of parameters.}
-    \label{tab:parameters}
+    \label{tab:evaluatinon}
   \end{table*}
   
